# GCCcommunication

./: CMakeLists.txt  GCCcoms.cpp  README.md  gcclibrary.hpp  readgcc.pio  squarewave.cpp  squarewave.hpp  squarewave.pio  wirelessgcc.cpp  writegcc.pio
gcclib/: CMakeLists.txt  gc_report.h  gcclibrary.cpp  gcclibrary.h  gcconsole.cpp  gcconsole.h  gccontroller.cpp  gccontroller.h
include/: gcclibrary.h
src/: GCCcoms.cpp  gcclibrary.cpp
